--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "รєเ๒ค#0001",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.5.3",
     "discord-player": "^5.1.0",
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
