--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "dotenv": "^10.0.0",
     "ffmpeg-static": "^4.4.0",
     "node-fetch": "^2.6.1",
-    "usetube": "^2.1.3",
-    "yt-search": "^2.10.1"
+    "ytdl-core": "^4.9.1"
   }
 }
