--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "discord-player": "^5.1.0",
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
-    "ffmpeg-static": "^4.4.0",
-    "node-fetch": "^2.6.1",
+    "ffmpeg": "0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
     "ytdl-core": "^4.9.1"
   }
 }
