Added spotify support

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "^0.0.1-security",
-    "play-dl": "^1.4.0",
+    "mongoose": "^6.0.14",
+    "play-dl": "^1.4.4",
     "ytdl-core": "^4.9.1"
   }
 }
